# Taurus-Engine

./: .gitignore
Developer/: renderer.txt
Editor/: CMakeLists.txt  Editor.qmlproject  Editor.qmlproject.qtds  Generate.bat  main.qml  qmlmodules
Editor/content/: App.qml  CMakeLists.txt  MainEditor.qml  SceneEditor.qml  SceneEditorForm.ui.qml  Screen01.ui.qml
Editor/imports/: CMakeLists.txt
Editor/imports/Editor/: CMakeLists.txt  qmldir
Editor/imports/Editor/designer/: plugin.metainfo
Editor/include/: OpenGLDevice.h  OpenGLRenderImp.h  OpenGLRenderer.h  OpenGLViewport.h
Editor/shader/: drawImage.fs  fragment.glsl  vertex.glsl
Editor/src/: OpenGLDevice.cpp  OpenGLDevicePart.cpp  OpenGLRenderImp.cpp  OpenGLRenderer.cpp  OpenGLViewport.cpp  import_qml_plugins.h  main.cpp
Programs/: test.py
Runtime/: CMakeLists.txt
Runtime/Core/: CMakeLists.txt
Runtime/Core/Async/: CMakeLists.txt
Runtime/Core/Async/include/: TaskGraphInterface.h
Runtime/Core/Containers/: CMakeLists.txt
Runtime/Core/Containers/include/: Allocater.hpp  Array.hpp  te_algobase.h  te_construct.h  te_iterator_base.h  te_type_trais.h  te_uninitialized.h
Runtime/Core/Containers/src/: Allocator.cpp
Runtime/Core/Math/: CMakeLists.txt
Runtime/Core/Math/include/: Box.hpp  BoxSphereBounds.hpp  Math.hpp  MathSSE.h  MathUtility.h  Octree.hpp  OctreePublic.h  PlatformMathSSE.h  Ray.hpp  Vector.hpp  Vector2.hpp  Vector4.hpp
Runtime/Core/Module/: CMakeLists.txt
Runtime/Core/Module/include/: IModuleInterface.h
Runtime/Core/Reflection/: CMakeLists.txt
Runtime/Core/Reflection/include/: FuncImp.hpp  IDRegistry.hpp  MethodPtr.h  Object.hpp  ObjectTree.h  RefFunction.hpp  RefFunction.inl  TClass.h  TField.cpp  TField.h  ToTTType.inl  TypeList.hpp  TypeList.inl  VarRange.h  small_vector.hpp
Runtime/Core/Reflection/src/: MethodPtr.cpp  ObjectTree.cpp  TClass.cpp  VarRange.cpp  main.cpp
Runtime/Core/include/: .GenericPlatform.h.swo  .GenericPlatform.h.swp  Actor.h  AssertionMacros.h  Core.h  CoreMiscDefines.h  Event.hpp  GenericPlatform.h  GenericPlatformMath.hpp  IActor.h  IActorComponent.h  Object.hpp  Platform.h  PreprocessorHelpers.h  RefCounting.h  TObject.h  ThreadSafeCounter.h  Type.hpp  Util.hpp  WindowsPlatform.h  WindowsPlatformAtomics.h
Runtime/Engine/: CMakeLists.txt
Runtime/Engine/NavigationSystem/: CMakeLists.txt
Runtime/Engine/NavigationSystem/include/: NavigationOctree.h
Runtime/Engine/NavigationSystem/src/: NavigationOctree.cpp
Runtime/Engine/include/: .RenderGraphDefinitins.h.swp  Actor.h  ActorComponent.h  BlendableInterface.h  CameraComponent.h  ColorVertexBuffer.h  Components.h  Cube.h  DeferredShadingSceneRenderer.h  DeviceProfileManager.h  Engine.h  EnumAsByte.hpp  HitProxies.h  IAsyncCompilation.h  IDeviceProfileSelectorModule.h  IInterface_AssetUserData.h  IInterface_CollisionDataProvider.h  INavRelevantInterface.h  IsEnumClass.hpp  MaterialInterface.h  MaterialRenderProxy.h  MemeroyImageWriter.h  MemoryLayout.h  Mesh.h  MeshBatch.h  MeshBatchElement.h  MeshComponent.h  MeshDrawCommand.h  MeshElementCollector.h  MeshExport.h  MeshMerging.h  MeshPassProcessor.h  MeshUVChannelInfo.h  Model.h  MultiGPU.h  NavigationScene.h  Noncopyable.h  PositionVertexBuffer.h  PrimitiveComponent.h  PrimitiveSceneInfo.h  (+41 more)
Runtime/Engine/src/: .RenderResource.cpp.swp  ActorComponent.cpp  Cube.cpp  DeferredShadingSceneRenderer.cpp  Model.cpp  NavigationScene.cpp  RenderResource.cpp  SceneComponent.cpp  SceneRendering.cpp  WindowsDeviceProfileSelectorModule.h
Runtime/Launch/: CMakeLists.txt
Runtime/Launch/include/: Launch.h  LaunchEngineLoop.h
Runtime/Launch/src/: Launch.cpp  LaunchEngineLoop.cpp  LaunchWindows.cpp
Runtime/RHI/: CMakeLists.txt
Runtime/RHI/include/: DynamicRHI.h  RHI.h  RHIBuffer.h  RHICommandListImmediate.h  RHIDefinitions.h  RHIFwd.h  RHIResource.h  RHIVertexDeclaration.h  RHIViewport.h
Runtime/RHI/src/: WindowsDynamicRHI.cpp
Runtime/VulkanRHI/: CMakeLists.txt
Runtime/VulkanRHI/include/: RHIVulkanDevice.h  VulkanCommandBuffer.h  VulkanDynamicRHI.h  VulkanGenericPlatform.h  VulkanMemory.h  VulkanQueue.h  VulkanSwapChain.h  VulkanViewport.h  VulkanWindowsPlatform.h
Runtime/VulkanRHI/src/: VulkanDynamicRHIModule.cpp  VulkanQueue.cpp  VulkanSwapChain.cpp  VulkanViewport.cpp
ThirdPart/vulkan/: install-vk-layers.ps1
ThirdPart/vulkan/Demos/: vkcube.vcxproj  vkcubepp.vcxproj  vulkaninfo.vcxproj
ThirdPart/vulkan/Demos/x64/Debug/vkcube/: vkcube.exe.recipe  vkcube.ilk
ThirdPart/vulkan/Demos/x64/Debug/vkcube/vkcube.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vkcube.lastbuildstate
cmake/modules/: .FindRUNTIME.cmake.swp  FindASSIMP.cmake
doc/: Actor.drawio  MeshDrawingPipeline.drawio
