cmake_minimum_required(VERSION 3.4.1)
project(Runtime)
set(RUNTIME_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(RUNTIME_CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Core)
set(RUNTIME_MATH_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Core/Math)
set(RUNTIME_CONTAINERS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Core/Containers)
set(RUNTIME_REFLECTION_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Core/Reflection)
set(RUNTIME_ENGINE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Engine)
set(RUNTIME_RHI_DIR ${CMAKE_CURRENT_SOURCE_DIR}/RHI)
set(RUNTIME_VULKAN_RHI_DIR ${CMAKE_CURRENT_SOURCE_DIR}/VulkanRHI)
set(RUNTIME_THIRD_PART_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../ThirdPart)
add_subdirectory(Core)
add_subdirectory(Engine)
add_subdirectory(Launch)
add_subdirectory(RHI)
add_subdirectory(VulkanRHI)
